--- a/examples/example1/Makefile
+++ b/examples/example1/Makefile
@@ -1,8 +1,8 @@
 CXX = g++
-CXXFLAGS += -std=c++11 `pkg-config --cflags computecpp`
-LDFLAGS += `pkg-config --libs computecpp`
-SYCLFLAGS += `pkg-config computecpp --variable device_cflags`
-SYCLCXX ?= `pkg-config computecpp --variable device_compiler`
+CXXFLAGS += -std=c++11 -I/opt/ComputeCpp-CE-2.0.0-x86_64-linux-gnu/include
+LDFLAGS += -L/opt/ComputeCpp-CE-2.0.0-x86_64-linux-gnu/lib -lComputeCpp
+SYCLFLAGS += -I/opt/ComputeCpp-CE-2.0.0-x86_64-linux-gnu/include -O2 -mllvm -inline-threshold=1000 -sycl -sycl-target ptx64
+SYCLCXX ?= compute++
 
 EXECUTABLE = example1
 
@@ -11,7 +11,7 @@ all : $(EXECUTABLE)
 %: %.cpp
 
 %.o : %.cpp
-	$(SYCLCXX) $(SYCLFLAGS) $< -o $@.sycl
+	$(SYCLCXX) $(SYCLFLAGS) $(SYCLTARGS) $< -o $@.sycl
 	$(CXX) -c $(CXXFLAGS) -include $@.sycl $< -o $@
 
 % : %.o
