Added cmake files for exceptions example

--- a/examples/simple_vec_add/Makefile
+++ b/examples/simple_vec_add/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
-CXXFLAGS += -std=c++11 -I/opt/ComputeCpp-CE-2.0.0-x86_64-linux-gnu/include
-LDFLAGS += -L/opt/ComputeCpp-CE-2.0.0-x86_64-linux-gnu/lib -lComputeCpp
-SYCLFLAGS += -I/opt/ComputeCpp-CE-2.0.0-x86_64-linux-gnu/include -O2 -mllvm -inline-threshold=1000 -sycl -sycl-target ptx64
+CXXFLAGS += -std=c++11 -I$(COMPUTECPP_ROOT_DIR)/include -I$(OCL_PATH)/include
+LDFLAGS += -L$(COMPUTECPP_ROOT_DIR)/lib -lComputeCpp
+SYCLFLAGS += -I$(COMPUTECPP_ROOT_DIR)/include -I$(OCL_PATH)/include -O2 -mllvm -inline-threshold=1000 -sycl -sycl-target ptx64
 SYCLCXX ?= compute++
 
 EXECUTABLE = simple_vec_add
