--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_STANDARD 14)
 enable_testing()
 
 add_subdirectory(exceptions)
+add_subdirectory(madd2)
 add_subdirectory(parfor_encrypt)
 add_subdirectory(reduce_sum)
 add_subdirectory(simple_vec_add)
