added function to allow user-defined selection of GPU device

--- a/examples/get_device_queue/CMakeLists.txt
+++ b/examples/get_device_queue/CMakeLists.txt
@@ -24,4 +24,5 @@ function(add_sample)
   install(TARGETS ${SDK_ADD_SAMPLE_TARGET} RUNTIME DESTINATION bin)
 endfunction(add_sample)
 
+include_directories( ../../library/include )
 add_sample(TARGET get_device_queue SOURCES get_device_queue.cpp)
