Cleaned more examples

--- a/examples/simple_vec_add/CMakeLists.txt
+++ b/examples/simple_vec_add/CMakeLists.txt
@@ -24,5 +24,5 @@ function(add_sample)
   install(TARGETS ${SDK_ADD_SAMPLE_TARGET} RUNTIME DESTINATION bin)
 endfunction(add_sample)
 
-include_directories(../../librry/include)
+include_directories(../../library/include)
 add_sample(TARGET simple_vec_add SOURCES simple_vec_add.cpp)
